MOB-5 Fixed the text alignment. Added a facebook logo and copyright watermark.

--- a/src/main/webapp/resources/static/css/footer.css
+++ b/src/main/webapp/resources/static/css/footer.css
@@ -1,5 +1,8 @@
 .Footer {
     background: linear-gradient(180deg, rgba(255, 255, 255, 0.2) 0%, rgba(255, 255, 255, 0) 100%), #172635;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
 }
 
 .FooterGridContainer {
@@ -11,22 +14,74 @@
     gap: 1px 1px;
     color: gainsboro;
     text-align: center;
+    margin-top: 5rem;
+    margin-bottom: 2rem;
 }
 
 .FooterGridContainer-FlexColumn-First {
     display: flex;
     flex-direction: column;
-    height: 40rem;
 }
 
 .FooterGridContainer-FlexColumn-Second {
     display: flex;
     flex-direction: column;
-    height: 40rem;
 }
 
 .FooterGridContainer-FlexColumn-Third {
     display: flex;
     flex-direction: column;
-    height: 40rem;
+    margin-top: 5.6rem;
+}
+
+.FooterGridContainer a {
+    margin-bottom: 5rem;
+    text-decoration: none;
+    color: gainsboro;
+}
+
+.FooterGridContainer a:hover {
+    color: white;
+    text-decoration: underline;
+}
+
+.FooterGridContainer h3 {
+    margin-bottom: 3rem;
+}
+
+.FooterSeparator {
+    border: 0.01rem solid gainsboro;
+    width: 50vw;
+    margin: 0 auto;
+}
+
+#copyright {
+    margin: 0 auto;
+    width: 50vw;
+    font-size: 0.7rem;
+    color: gainsboro;
+    margin-top: 0.5rem;
+}
+
+.fa {
+  padding: 1rem;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 25%;
+}
+
+.fa:hover {
+    opacity: 0.7;
+}
+
+.fa-facebook {
+  background: #3B5998;
+  color: white;
+  float: right;
+}
+
+.FooterSocialMediaIcons {
+    margin: 0 auto;
+    width: 50vw;
+    margin-bottom: 5.5rem;
 }
